// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entityactivity;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_usage_detail.proto";

option java_multiple_files = true;
option go_package = "953_events_api";

message EntityActivityCreateDTO {
  string accountIdentifier = 1;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredEntity = 2;
  string type = 3;
  string status = 4;
  int64 activityTime = 5;
  string description = 6;
  string errorMessage = 7;
  oneof details {
    ConnectivityCheckActivityDetailProtoDTO connectivityDetail = 8;
    EntityUsageActivityDetailProtoDTO entityUsageDetail = 9;
  }

  message ConnectivityCheckActivityDetailProtoDTO {
    ConnectorValidationResultProto connectorValidationResult = 1;
  }

  message EntityUsageActivityDetailProtoDTO {
    io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredByEntity = 1;
    string activityStatusMessage = 2;
    repeated ErrorDetailProto errors = 3;
    string errorSummary = 4;
    map<string, string> activityMetadata = 5;
    io.harness.eventsframework.schemas.entity.EntityUsageDetailProto usageDetail = 6;
  }

  message ConnectorValidationResultProto {
    string status = 1;
    repeated ErrorDetailProto errors = 2;
    string errorSummary = 3;
    int64 testedAt = 4;
    string delegateId = 5;
  }

  message ErrorDetailProto {
    string reason = 1;
    string message = 2;
    int32 code = 3;
  }
}
